fix vesselGroup popup z-index problem

--- a/apps/fishing-map/features/vessel/VesselHeader.module.css
+++ b/apps/fishing-map/features/vessel/VesselHeader.module.css
@@ -1,14 +1,18 @@
 .summaryContainer {
-  padding: var(--space-S) var(--space-M);
+  padding: var(--space-S) var(--space-S) var(--space-S) var(--space-M);
   border-bottom: var(--border);
   min-height: 5.2rem;
+}
+
+.stickyContainer {
+  position: relative;
+  z-index: 1;
 }
 
 .sticky {
   margin-top: 51px;
   background-color: var(--color-white);
   border-top: var(--border);
-  z-index: 2;
 }
 
 .titleContainer {
